Delete result number description

--- a/src/config/locales/ko/page.json
+++ b/src/config/locales/ko/page.json
@@ -13,9 +13,9 @@
         "delete": "삭제하기"
     },
     "ResultPage": {
-        "title" : "얼굴 인식 결과, 6개의 사진이 의심됩니다",
-        "subtitle1": "원본 트윗 버튼을 클릭하면 원본 url로 연결됩니다",
-        "subtitle2" : "확인 후, 자신의 사진이 확실한 것만 클릭해주세요!",
+        "title" : "얼굴 인식 결과, 다음 사진들이 의심됩니다",
+        "subtitle1": "원본 트윗을 확인한 다음, 내 사진이 확실한 것만 선택해주세요",
+        "subtitle2" : "원본 트윗이 삭제되거나 정지 계정인 경우 삭제버튼을 클릭해주세요",
         "nextPage": "네트워크맵 보기",
        "tweet" : "원본트윗",
        "suspend" : "정지계정신고"
