Docs: subtitle 문구 수정

--- a/src/config/locales/en/page.json
+++ b/src/config/locales/en/page.json
@@ -10,7 +10,7 @@
     },
     "MainButton":{
         "result":"show result",
-        "delete": "delete photo"
+        "delete": "taking a photo again"
     },
     "research" : "rescan",
     "ResultPage": {
