--- a/src/config/locales/en/page.json
+++ b/src/config/locales/en/page.json
@@ -19,7 +19,7 @@
         "subtitle2" : "If the original tweet is deleted or is a suspended account, please click Delete button",
         "nextPage": "show networkmap",
         "tweet" : "tweet",
-        "suspend" : "suspend account",
+        "suspend" : "Receipt of suspended account report",
         "suspendAccountReport": "Suspended account report has been completed"
     },
     "NetworkmapPage" : {
