--- a/src/config/locales/ko/page.json
+++ b/src/config/locales/ko/page.json
@@ -18,7 +18,7 @@
         "subtitle2" : "원본 트윗이 삭제되거나 정지 계정인 경우 삭제버튼을 클릭해주세요",
         "nextPage": "네트워크맵 보기",
        "tweet" : "원본트윗",
-       "suspend" : "정지계정신고",
+       "suspend" : "정지 계정 신고 접수",
        "suspendAccountReport": "정지된 계정 신고가 완료되었습니다."
     },
     "NetworkmapPage" : {
