--- a/src/config/locales/ko/page.json
+++ b/src/config/locales/ko/page.json
@@ -16,26 +16,25 @@
         "title" : "얼굴 인식 결과, 다음 사진들이 의심됩니다",
         "subtitle1": "원본 트윗을 확인한 다음, 내 사진이 확실한 것만 선택해주세요",
         "subtitle2" : "원본 트윗이 삭제되거나 정지 계정인 경우 삭제버튼을 클릭해주세요",
-        "nextPage": "네트워크맵 보기",
        "tweet" : "원본트윗",
        "suspend" : "정지 계정 신고 접수",
-       "suspendAccountReport": "정지된 계정 신고가 완료되었습니다."
+       "suspendAccountReport": "정지 계정/삭제 트윗 신고가 완료되었습니다"
     },
     "NetworkmapPage" : {
         "title" : "트위터 네트워크 맵",
         "subtitle1": "원본 트윗에 좋아요를 누르거나 리트윗을 한 계정입니다",
-        "subtitle2" : "신고하기 버튼을 누르면 해당 계정들을 모두 신고할 수 있습니다",
+        "subtitle2" : "노드를 클릭하면 원본 트윗으로 이동해 신고 결과를 확인할 수 있습니다",
         "nextPage": "신고하기"
     },
     "ReportPage" : {
         "title" : "이메일을 입력하고 신고 버튼을 클릭해주세요",
         "subtitle1": "허위 신고는 중범죄에 해당합니다",
         "subtitle2" : "내 사진이 확실한 것만 신고해주세요",
-        "emailAlert" : "이메일로 발송되었습니다",
+        "emailAlert" : "신고가 접수되었습니다",
         "validEmailCheck" : "이메일을 형식에 맞게 입력해주세요",
-        "alreadyReport" : "이미 신고가 완료되었습니다",
-        "helperText": "24시간 이내 전송됩니다",
-        "button" : "신고 및 증거 전송받기"
+        "alreadyReport" : "이미 신고가 접수되었습니다",
+        "helperText": "24시간 이내 증거가 전송됩니다",
+        "button" : "트위터 신고 및 증거 전송받기"
     },
     "research" : "재검색",
     "EmptyResult" : {
